--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -3,3 +3,23 @@
     padding: 12px 0 12px 0;
     border-bottom: solid 1px gray;
 }
+
+.botaoalign{
+    text-align: right;
+}
+
+.menu{
+    text-align: center;
+}
+
+.menu:hover{
+    color: white;
+}
+
+.menulink{
+    color: white;
+    margin-right: 15px;
+    border-right: solid 1px #525252;
+    border-left: solid 1px #525252;
+    padding: 10px;
+}
