--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -10,10 +10,7 @@
 
 .menu{
     text-align: center;
-}
-
-.menu:hover{
-    color: white;
+    margin-top: 17px;
 }
 
 .menulink{
@@ -22,4 +19,22 @@
     border-right: solid 1px #525252;
     border-left: solid 1px #525252;
     padding: 10px;
+}
+
+.menulink:hover{
+    color: white;
+    text-decoration: none;
+}
+
+.botao{
+    background-color: black;
+    border: solid 1px;
+    color: white;
+    padding: 15px;
+}
+
+.botao:hover{
+    background-color: white;
+    color: black;
+
 }
