--- a/components/nossahistoria/nossahistoria.module.css
+++ b/components/nossahistoria/nossahistoria.module.css
@@ -28,3 +28,35 @@
 .linhasessao{
     padding: 35px;
 }
+
+.maquina{
+    -webkit-text-stroke-color: #ffffff;
+    -webkit-text-stroke-width: 0.5px;
+    text-transform: uppercase;
+    font-size: 50px;
+}
+
+.texto{
+    color: white;
+    margin-bottom: 10px;
+}
+
+.botao{
+    padding: 10px 25px 10px 25px;
+    border-radius: 5px;
+    background-color: transparent;
+    color: white;
+    border: solid 1px white;
+    margin-top: 10px;
+    transition: background 0.5s;
+}
+
+.botao:hover{
+    color: black;
+    background-color: white;
+}
+
+.img{
+    width: 100%;
+    height: 120px;
+}
