--- a/components/operacao/operacao.module.css
+++ b/components/operacao/operacao.module.css
@@ -1,20 +1,36 @@
 .background{
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px 55px 20px 55px;
     align-self: center;
 }
 
 .operacao{
-    font-family: "Univers Condensed", sans-serif;
+    font-family: "Univers Bold", sans-serif;
+    font-weight: bold;
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 1px;
     text-transform: uppercase;
+    font-size: 100px;
+    color: transparent;
 }
 
 .button{
-    padding: 2px 40px 2px 40px;
+    padding: 2px 60px 2px 60px;
     border-radius: 5px;
+    font-family: "Univers Condensed", sans-serif;
+    text-transform: uppercase;
+    margin-top: 15px;
+    font-size: 18px;
 }
 
 .button:hover{
     background-color: black;
     color: white;
+}
+
+.frase{
+    font-family: "Univers Condensed", sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 20px;
+    margin-top: 155px;
 }
