--- a/components/pth18/pth18.module.css
+++ b/components/pth18/pth18.module.css
@@ -4,9 +4,21 @@
     padding: 35px;
 }
 
+.pth1{
+    font-family: "Univers Bold", sans-serif;
+    font-weight: bold;
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 0.5px;
+    text-transform: uppercase;
+    font-size: 100px;
+    color: transparent;
+}
+
 .pth2{
-    font-family: Univers Condensed, sans-serif;
-    font-size: 75px;
+    font-family: "Univers Condensed", sans-serif;
+    font-weight: bold;
+    font-size: 90px;
+    margin-top: -90px;
 }
 
 .text{
@@ -34,10 +46,12 @@
     margin-top: 18px;
     font-family: "Univers Light", sans-serif;
     font-size: 55px;
+    font-weight: bold;
 }
 
 .phrase{
     font-family: "Univers Light", sans-serif;
+    font-size: 20px;
 }
 
 .tabs{
