--- a/components/form/form.module.css
+++ b/components/form/form.module.css
@@ -11,11 +11,13 @@
     width: 10%;
 }
 
-.text-2{
-    font-family: "Univers Bold Condensed", sans-serif;
+.text2{
     color: white;
 }
 
-.text-1{
+.text1{
     color: white;
+    font-family: "Univers", sans-serif;
+    text-transform: uppercase;
+    font-size: 55px;
 }
