--- a/components/form/form.module.css
+++ b/components/form/form.module.css
@@ -2,13 +2,15 @@
     background-image: url("../../public/fundo-quinto-bloco.jpg");
     background-size: cover;
     padding: 95px 20px 95px 20px;
+    
 
 }
 
 .divider{
     background-color: white;
-    height: 1px;
+    height: 2px;
     width: 18%;
+    margin-top: -15px;
 }
 
 .text2{
@@ -18,6 +20,10 @@
     font-family: "Univers", sans-serif;
     font-weight: bold;
     margin-top: -30px;
+}
+
+.video{
+    margin-top: 18px;
 }
 
 .text1{
@@ -30,7 +36,8 @@
 
 .bgform{
     background-color: black;
-    padding: 20px;
+    padding: 50px;
+    margin-top: 18px;
 }
 
 .titleform{
@@ -45,4 +52,32 @@
     color: white;
     font-family: "Univers Condensed", sans-serif;
     text-transform: uppercase;
+    font-size: 18px;
+}
+
+.input{
+    color: white;
+    background-color: transparent;
+    border: solid white 2px;
+    padding: 5px 240px 5px 5px;
+    margin-top: 10px;
+}
+
+.submitButton{
+    background-color: white;
+    width: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-transform: uppercase;
+    font-family: "Univers Condensed", sans-serif;
+    font-weight: bold;
+    margin-top: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.submitButton:hover{
+    background-color: black;
+    color: white;
+    border: solid white 2px;
 }
