--- a/components/operacao/operacao.module.css
+++ b/components/operacao/operacao.module.css
@@ -20,6 +20,8 @@
     text-transform: uppercase;
     margin-top: 15px;
     font-size: 18px;
+    cursor: pointer;
+    transition: 0.4s;
 }
 
 .button:hover{
