--- a/components/nossahistoria/nossahistoria.module.css
+++ b/components/nossahistoria/nossahistoria.module.css
@@ -2,8 +2,7 @@
     background-size: cover;
     width: 100%;
     height: 600px;
-    background: rgb(8,10,10);
-    background: linear-gradient(180deg, rgba(8,10,10,1) 35%, rgba(24,24,24,1)), url("../../public/fundo-primeiro-bloco.jpg");
+    background: url("../../public/fundo-primeiro-bloco-2.jpg");
 }
 
 .conheca{
